k8s-pod.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
      app: nginx
      tool: skaffold
  name: frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer
  selector:
    run: frontend
status:
  loadBalancer: {}
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      run: frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: frontend
    spec:
      containers:
      - image: amitkarpe/nginx
        name: frontend
        ports:
        - containerPort: 80
        resources: {}
status: {}
